--- a/index.html
+++ b/index.html
@@ -6,19 +6,28 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style_preproc.css">
+    <link rel="stylesheet" href="css/mobile_munu.css">
 </head>
 <body>
 <header>
     <div class="container">
         <img src="images/IMAGE.svg">
         <h3>Minimal</h3>
-        <ul>
-            <li>process</li>
-            <li>projects</li>
-            <li>team</li>
-            <li>contact</li>
-        </ul>
+        <div id="toggle">
+            <input type="checkbox">
+            <span></span>
+        </div>
+
+        <div id="menu">
+            <div id="logo"></div>
+            <ul>
+                <li>process</li>
+                <li>projects</li>
+                <li>team</li>
+                <li>contact</li>
+            </ul>
+        </div>
     </div>
 </header>
 <main>
@@ -36,5 +45,10 @@
         </div>
     </section>
 </main>
+<script src="js/jquery-3.7.0.js"></script>
+<script>
+console.log($);
+</script>
+<script src="js/js_mobile_menu.js"></script>
 </body>
 </html>
