--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Vollkorn&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style_preproc.css">
     <link rel="stylesheet" href="css/mobile_munu.css">
 </head>
@@ -34,21 +37,229 @@
     <section class="making_brands">
         <div class="container">
             <h1>Making brands stand out is our obsession</h1>
-            <img src="images/Rectangle.jpg">
+            <div class="rectangle"></div>
             <p>Let us help your brand stand out.</p>
         </div>
     </section>
     <section class="minimalist">
         <div class="container">
-            <p>Minimalist is a full-service digital creative agency located in Ontorio Canada. We focus on design, consulting, technology, and photography. We’ve been building unique digital products, platforms, and experiences for the past 6 years. Let us help your company grow.</p>
+            <p>Minimalist is a full-service digital creative agency located in Ontorio Canada. We focus on design,
+                consulting, technology, and photography. We’ve been building unique digital products, platforms, and
+                experiences for the past 6 years. Let us help your company grow.</p>
             <a href="#">Get in touch</a>
         </div>
     </section>
+    <section class="how">
+        <div class="container">
+            <h3>How we make brands thrive</h3>
+            <div class="rectangle"></div>
+            <div class="how_we container">
+                <article>
+                    <div class="square">
+                        <img src="images/image_1.svg" alt="img">
+                    </div>
+                    <h4>SET a target</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
+                        elementum tristique.</p>
+                </article>
+                <article>
+                    <div class="square">
+                        <img src="images/image_2.svg" alt="img">
+                    </div>
+                    <h4>design a solution</h4>
+                    <p>Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                        erat.</p>
+                </article>
+                <article>
+                    <div class="square">
+                        <img src="images/image_3.svg" alt="img">
+                    </div>
+                    <h4>track the progress</h4>
+                    <p>Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique
+                        posuere.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="recent_projects">
+        <div class="container">
+            <h3>Recent projects</h3>
+            <div class="rectangle"></div>
+            <div class="woods">
+                <article>
+                    <img src="images/image_4.jpg" alt="img">
+                    <h4>woods</h4>
+                    <p>Photography</p>
+                </article>
+                <article>
+                    <img src="images/image_5.jpg" alt="img">
+                    <h4>path</h4>
+                    <p>Website • Photography</p>
+                </article>
+                <article>
+                    <img src="images/image_6.jpg" alt="img">
+                    <h4>darkness</h4>
+                    <p>Website</p>
+                </article>
+                <article>
+                    <img src="images/image_7.jpg" alt="img">
+                    <h4>waves</h4>
+                    <p>Photography</p>
+                </article>
+                <article>
+                    <img src="images/image_8.jpg" alt="img">
+                    <h4>drops</h4>
+                    <p>Website</p>
+                </article>
+                <article>
+                    <img src="images/image_9.jpg" alt="img">
+                    <h4>ocean</h4>
+                    <p>Website</p>
+                </article>
+                <article>
+                    <img src="images/image_10.jpg" alt="img">
+                    <h4>town</h4>
+                    <p>Website</p>
+                </article>
+                <article>
+                    <img src="images/image_11.jpg" alt="img">
+                    <h4>mountain</h4>
+                    <p>Website</p>
+                </article>
+                <article>
+                    <img src="images/image_12.jpg" alt="img">
+                    <h4>camera</h4>
+                    <p>Website</p>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="our">
+            <h3>our team</h3>
+            <div class="rectangle"></div>
+            <div class="our_team container">
+                <article>
+                    <img class="photo" src="images/image_13.jpg" alt="img">
+                    <h4>Ron Swanson</h4>
+                    <p>Founder</p>
+                    <a><img src="images/image_25.svg" alt="img"></a>
+                    <a><img src="images/image_26.svg" alt="img"></a>
+                    <a><img src="images/image_27.svg" alt="img"></a>
+                </article>
+                <article>
+                    <img class="photo" src="images/image_14.jpg" alt="img">
+                    <h4>Julia Depish</h4>
+                    <p>Marketing</p>
+                    <a><img src="images/image_25.svg" alt="img"></a>
+                    <a><img src="images/image_26.svg" alt="img"></a>
+                    <a><img src="images/image_27.svg" alt="img"></a>
+                </article>
+                <article>
+                    <img class="photo" src="images/image_15.jpg" alt="img">
+                    <h4>Danny Devry</h4>
+                    <p>Designer</p>
+                    <a><img src="images/image_28.svg" alt="img"></a>
+                    <a><img src="images/image_25.svg" alt="img"></a>
+                    <a><img src="images/image_29.svg" alt="img"></a>
+                    <a><img src="images/image_30.svg" alt="img"></a>
+                    <a><img src="images/image_27.svg" alt="img"></a>
+                </article>
+                <article>
+                    <img class="photo" src="images/image_16.jpg" alt="img">
+                    <h4>Lisa Smith</h4>
+                    <p>Developer</p>
+                    <a><img src="images/image_24.svg" alt="img"></a>
+                    <a><img src="images/image_25.svg" alt="img"></a>
+                    <a><img src="images/image_27.svg" alt="img"></a>
+                </article>
+            </div>
+        </div>
+    </section>
+    <section class="guys">
+        <div class="quotes">
+            <a href="#"><img src="images/image_20.svg" alt="img"></a>
+        </div>
+        <div class=" these_guys container">
+            <article>
+                <p>“I love these guys! They did a great job. I would recommend them to anyone.”</p>
+                <a><img src="images/image_17.jpg" alt="img"></a>
+                <h4>Julius Von Uberstien</h4>
+            </article>
+            <article>
+                <p>“Elexis Corp. has grown immensely with the help of Minimal.”</p>
+                <a><img src="images/image_18.jpg" alt="img"></a>
+                <h4>Rachel Stamos</h4>
+            </article>
+        </div>
+    </section>
+    <section class="last">
+        <h3>LET’s Get in touch</h3>
+        <div class="rectangle"></div>
+        <div class="container last_container">
+            <article>
+                <a><img src="images/image_21.svg" alt="img"></a>
+                <h4>MEET US IN PERSON</h4>
+                <p>8776 Juniper Street<br>Unit #204<br>Merriweather, Ontorio<br>Canada</p>
+            </article>
+            <article>
+                <a><img src="images/image_22.svg" alt="img"></a>
+                <h4>The traditional way</h4>
+                <p>Email us<br>contact@minimal.com</p>
+                <p class="contact_form">Contact form<br>Scroll down</p>
+            </article>
+            <article>
+                <a><img src="images/image_23.svg" alt="img"></a>
+                <h4>Let’s get social</h4>
+                <div class="links">
+                    <div>
+                            <p class="facebook">Facebook</p></a>
+                    </div>
+                    <div>
+                            <p class="twitter">Twitter</p></a>
+                    </div>
+                    <div>
+                            <p class="linkedin">Linkedin</p></a>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+    <footer>
+        <section>
+            <div class="form">
+                <form action="#" method="post">
+                    <div>
+                        <label for="name"></label>
+                        <input type="text" name="Name" placeholder="Name" id="name">
+                    </div>
+                    <div>
+                        <label for="email"></label>
+                        <input type="email" name="Email" placeholder="Email" id="email">
+                    </div>
+                    <div>
+                        <label for="budget"></label>
+                        <input type="text" name="Budget" placeholder="Budget" id="budget">
+                    </div>
+                    <div>
+                        <label for="describe"></label>
+                        <textarea name="Describe your project..." placeholder="Describe your project..."
+                                  id="describe"></textarea>
+                    </div>
+                    <div class="button">
+                        <button class="button_1">
+                            Send Message
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </section>
+    </footer>
 </main>
-<script src="js/jquery-3.7.0.js"></script>
+<!--<script src="js/jquery-3.7.0.js"></script>
 <script>
-console.log($);
-</script>
+    console.log($);
+</script>-->
 <script src="js/js_mobile_menu.js"></script>
 </body>
 </html>
