--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div class="container">
-        <img src="images/IMAGE.svg">
+        <img class="logo" src="images/image.svg">
         <h3>Minimal</h3>
         <div id="toggle">
             <input type="checkbox">
@@ -25,10 +25,10 @@
         <div id="menu">
             <div id="logo"></div>
             <ul>
-                <li>process</li>
-                <li>projects</li>
-                <li>team</li>
-                <li>contact</li>
+                <li><a href="#">process</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">team</a></li>
+                <li><a href="#">contact</a></li>
             </ul>
         </div>
     </div>
@@ -208,18 +208,18 @@
                 <p>Email us<br>contact@minimal.com</p>
                 <p class="contact_form">Contact form<br>Scroll down</p>
             </article>
-            <article>
+            <article class="artocle_1">
                 <a><img src="images/image_23.svg" alt="img"></a>
                 <h4>Let’s get social</h4>
                 <div class="links">
                     <div>
-                            <p class="facebook">Facebook</p></a>
+                        <p class="facebook">Facebook</p></a>
                     </div>
                     <div>
-                            <p class="twitter">Twitter</p></a>
+                        <p class="twitter">Twitter</p></a>
                     </div>
                     <div>
-                            <p class="linkedin">Linkedin</p></a>
+                        <p class="linkedin">Linkedin</p></a>
                     </div>
                 </div>
             </article>
@@ -252,6 +252,10 @@
                         </button>
                     </div>
                 </form>
+            </div>
+            <div class="logo_2">
+                <a href="#"><img src="images/image_31.svg" alt="img"></a>
+                <p>Minimal Template made in Webflow. All rights reserved.</p>
             </div>
         </section>
     </footer>
