--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <header>
     <div class="container">
-        <img class="logo" src="images/image.svg">
+        <img class="logo" src="images/image.svg" alt="img">
         <h3>Minimal</h3>
         <div id="toggle">
             <input type="checkbox">
