--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
                 <h4>Let’s get social</h4>
                 <div class="links">
                     <div>
-                        <p class="facebook">Facebook</p></a>
+                        <p class="facebook">Facebook</p>
                     </div>
                     <div>
-                        <p class="twitter">Twitter</p></a>
+                        <p class="twitter">Twitter</p>
                     </div>
                     <div>
-                        <p class="linkedin">Linkedin</p></a>
+                        <p class="linkedin">Linkedin</p>
                     </div>
                 </div>
             </article>
